# agentic-neuron-proofreader

./: README.md  pyproject.toml
docs/source/: conf.py
src/agentic_neuron_proofreader/: visualization.py
src/agentic_neuron_proofreader/data_modules/: datasets.py  graph_classes.py
src/agentic_neuron_proofreader/utils/: geometry_util.py  graph_util.py  img_util.py  swc_util.py  util.py
