[project]
name = "agentic_neuron_proofreader"
version = "0.1.0"

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    'gcsfs',
    'google-cloud-storage',
    'matplotlib',
    "pandas",
    "s3fs",
    'scikit-image',
    'scikit-learn',
    'scipy',
    'tensorboard',
    "tqdm"
]

[project.optional-dependencies]
docs = [
    'Sphinx',
    'sphinx-jinja',
    'furo',
    'docutils'
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
